--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,8 +16,12 @@
 
 
 
+
+
+	<div class="container">
+		<!-- Main view for showing all views -->
 		<div ui-view="main"></div>
-	
+	</div>
 
 
 <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
@@ -29,10 +33,18 @@
 
 	<!--               Controllers            -->
 
+             	<!--  client -->
+	<script type="text/javascript"
+		src="js/client/controller/clients.controller.js"></script>
+	<script type="text/javascript"
+		src="js/client/controller/newClient.controller.js"></script>
+	<script type="text/javascript"
+		src="js/client/controller/updateClient.controller.js"></script>
 
 
 	<!--               Services            -->
-
-
+	      
+	      	<!--  client -->
+  <script type="text/javascript" src="js/client/service/client.Data.service.js"></script>
 </body>
 </html>
