--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -42,7 +42,8 @@
 		src="js/client/controller/newClient.controller.js"></script>
 	<script type="text/javascript"
 		src="js/client/controller/updateClient.controller.js"></script>
-
+	<script type="text/javascript"
+		src="js/client/controller/empruntByClient.controller.js"></script>
 
 	<!--               Services            -->
 	      
