--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,7 +11,7 @@
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	    <link rel="stylesheet" href="https://cdn.rawgit.com/angular/bower-material/v0.10.0/angular-material.css" />
 	        <link rel="stylesheet" href="https://rawgit.com/jtblin/angular-chart.js/a0b1ce650d5dce9b7ccdd86843d83f27b0d7bc03/dist/angular-chart.css"> 
-<link rel="stylesheet" type="text/css" href="app/css/style.css" />
+<link rel="stylesheet" type="text/css" href="css/style.css" />
 
 <base href="/">
 </head>
@@ -22,10 +22,10 @@
 
 
 
-	<div class="container">
+
 		<!-- Main view for showing all views -->
 		<div ui-view="main"></div>
-	</div>
+	
 
 
 
@@ -58,6 +58,9 @@
 
 	<script type="text/javascript" src="js/controller.js"></script>
 	<script type="text/javascript" src="js/services.js"></script>
+<script type="text/javascript" src="js/loginService.js"></script>
+<script type="text/javascript" src="js/nav.js"></script>
+<script type="text/javascript" src="js/login.js"></script>
 
 	<!--               Controllers            -->
 
